[package]
name = "rstherac25"
version = "0.1.0"
edition = "2021"
authors = ["pillowtrucker"]
description = "Therac-25 radiation therapy simulator - educational recreation of the infamous medical device incidents"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rstherac25"
path = "src/main.rs"

[dependencies]
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Window", "Document", "HtmlElement", "Element"] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wee_alloc = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "console_error_panic_hook", "wasm-bindgen-futures", "js-sys", "serde-wasm-bindgen", "wee_alloc"]
